c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/sub_double_from_ptr.c
int main(void)
{
    int *y = 0;
    // you can't subtract a double from a pointer
    return (y - 0.0 == 0.0);
}